<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">gastos</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="lblIngreGas">Ingreso / Gasto</string>
    <string name="lblResumen">Resumen</string>
    <string name="lblListado">Listado</string>
    <string name="lblNuevoIngreGas">Nuevo movimiento</string>
    <string name="lblBotonAnadir">Añadir</string>
    <string name="lblBotonCancelar">Cancelar</string>
    <string name="lblCantidadGasto">Importe</string>
    <string name="lblFechaOperacion">Fecha operación</string>
    <string name="lblIngreso">Ingreso</string>
    <string name="lblGasto">Gasto</string>
    <string name="lblAnadirFecha">Cambiar</string>
    <string name="lblTipoMovimiento">Tipo de movimiento</string>
    <string name="title_activity_ingre_gas">IngreGasActivity</string>
    
    <string name="infoCantidad">Introduzca una cantidad</string>
    

</resources>