<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".IngresoGasActivity"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/lblNuevoIngreGas"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="8pt"
        android:text="@string/lblNuevoIngreGas" />
    <TextView
        android:id="@+id/lblCantidadGasto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblCantidadGasto" 
        android:textSize="10pt"
        android:layout_below="@id/lblNuevoIngreGas"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"/>
    <EditText 
        android:id="@+id/cantidad"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/infoCantidad"
        android:inputType="numberDecimal"
        android:layout_below="@id/lblCantidadGasto"
        android:layout_alignParentLeft="true"
        />
    <TextView
        android:id="@+id/lblFechaOperacion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblFechaOperacion" 
        android:textSize="10pt"
        android:layout_below="@id/cantidad"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"/>
    <Button 
        android:id="@+id/btnNuevaFecha"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="anadirIngresoGasto"
        android:layout_below="@id/lblFechaOperacion"
        android:background="@android:drawable/btn_dropdown"
        android:layout_alignParentLeft="true"
        />
    <TextView
        android:id="@+id/lblTipoMovimiento"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblTipoMovimiento" 
        android:textSize="10pt"
        android:layout_below="@id/btnNuevaFecha"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"/>
    <RadioGroup 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:id="@+id/radioTipoMov"
	    android:layout_below="@id/lblTipoMovimiento"
        android:layout_alignParentLeft="true"
	    android:orientation="horizontal"
	    android:layout_marginTop="5dp">
	    <RadioButton android:id="@+id/radioIngreso"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/lblIngreso"
	        android:checked="true"/>
	    <RadioButton android:id="@+id/radioGasto"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/lblGasto"
	        android:checked="false"/>
	</RadioGroup>
    <Button 
        android:id="@+id/btnAnadirMovimiento"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="anadirIngresoGasto"
        android:text="@string/lblBotonAnadir"
        android:layout_below="@id/radioTipoMov"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="15dp"
        />
    
    

</RelativeLayout>