<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btnIngreGas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblIngreGas" />

    <Button
        android:id="@+id/btnListado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblListado" />

    <Button
        android:id="@+id/btnResumen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblResumen" />

</TableLayout>